# hackalod-gouda23-na-td

./: .gitignore  README.md
backend/: .env.example  README.md  app.py  pyproject.toml  try_search_person.http
backend/backend/: constants.py  openai.py  services.py  story_logic.py
backend/backend/chains/: search_images.py
backend/backend/prompts/: extract_terms_prompt.py  story_page_prompt.py
backend/notebooks/: explore_raw_data.ipynb  out.json
backend/scripts/: clean_files.py  extract_terms.py  face_to_image.py  face_to_prompt.py  index_images.py  voice.py
backend/tests/: prompt.py
data/: foto dataselectie v0.1.csv
data/curated/: curated_trip1.json  curated_trip2.json  curated_trip3.json  curated_trip4.json  four.json  one.json  three.json  trip1.json  trip1.txt  trip2.json  trip3.json  trip3.txt  trip4.json  trip4.txt  trip5.json  trip5.txt  trip6.json  trip6.txt  trip7.json  trip7.txt  trip8.json  trip8.txt  two.json
data/people/: 166040.txt  4088.txt  5100.txt  5101.txt  5102.txt  5103.txt  5104.txt  5106 ƒ5 498.txt  5107.txt  5108.txt  5112.txt  5114.txt  5118.txt  5119.txt  5120.txt
data/suppleties/: nl_zh_ha_na-2_10_50-505_100_page_data.json  nl_zh_ha_na-2_10_50-505_101_page_data.json  nl_zh_ha_na-2_10_50-505_102_page_data.json  nl_zh_ha_na-2_10_50-505_103_page_data.json  nl_zh_ha_na-2_10_50-505_104_page_data.json  nl_zh_ha_na-2_10_50-505_105_page_data.json  nl_zh_ha_na-2_10_50-505_106_page_data.json  nl_zh_ha_na-2_10_50-505_107_page_data.json  nl_zh_ha_na-2_10_50-505_108_page_data.json  (+269 more)
frontend/: README.md  package-lock.json  package.json
(+46 files in other folders)
