[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Egor Dmitriev <egor.dmitriev@luminis.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = {extras = ["llm"], version = "^0.0.329"}
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
