[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Egor Dmitriev <egor.dmitriev@luminis.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = {extras = ["llm"], version = "^0.0.329"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pandas = "^2.1.2"
flask = "^3.0.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
openai = "^0.28.1"
jinja2 = "^3.1.2"
pillow = "^10.1.0"
chromadb = "^0.4.15"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
